# split-django-app-example

./: freeze.sh  manage.py  pyproject.toml  requirements.txt
comments/: models.py
comments/migrations/: 0001_initial.py
first/: models.py
first/migrations/: 0001_initial.py  0002_alter_comment_message.py  0003_alter_comment_message.py  0004_delete_comment.py  0004_move_comment.py
system/: migrations.py  settings.py  sql_generators.py  urls.py
