[tool.poetry]
name = "split-django-app-example"
version = "0.1.0"
description = ""
authors = ["Roman Tiukh <frogour@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.8"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
